testsuite/tests/deriving/should_compile/T1133a.hs
module T1133a where

import {-# SOURCE #-} T1133
