testsuite/tests/deriving/should_fail/T14365A.hs
module T14365A where

import {-# SOURCE #-} T14365B

main = return ()
